git_dev_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: git-deployment
  labels:
    app: git
spec:
  replicas: 2
  selector:
    matchLabels:
      app: git
  template:
    metadata:
      labels:
        app: git
    spec:
      containers:
      - name: git
        image: alpine/git
        command: ["sleep", "infinity"]
