maven_prod_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maven-deployment
  labels:
    app: maven
spec:
  replicas: 2
  selector:
    matchLabels:
      app: maven
  template:
    metadata:
      labels:
        app: maven
    spec:
      containers:
      - name: maven
        image: maven:3.8.3-jdk-11-slim
        command: ["sleep", "infinity"]
