loadbalencer-jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: dev
spec:
  type: LoadBalancer
  selector:
    app: jenkins
  ports:
  - name: http
    port: 8080
    targetPort: 8080
