nginx_clasterIP_services.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector: 
    app: nginx
  ports:
  - port: 80
