nginx_nodeport_service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: nginx
  namespace: prod
spec:
  selector:    
    app: nginx
  type: NodePort
  ports:  
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30000
    protocol: TCP
